--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,5 +1,6 @@
 #site-footer {
     @include spacer; 
-    background-color: $clr-bg;
+    background-color: $clr-primary;
+    color: $clr-accent;
     text-align: right;
 }
