--- a/src/sass/_song.scss
+++ b/src/sass/_song.scss
@@ -24,7 +24,7 @@
       span {
         font-size: 1.2rem;
         padding: 1rem;
-        text-shadow: 0.1rem 0.1rem 0 $clr-accent;
+        // text-shadow: 0.1rem 0.1rem 0 $clr-accent;
       }
     }
 
@@ -46,7 +46,7 @@
               width: fit-content;
               font-family: monospace;
               font-weight: bold;
-              font-size: 0.9rem;
+              font-size: 1rem;
             }
           }
         }
