--- a/src/sass/_song.scss
+++ b/src/sass/_song.scss
@@ -44,9 +44,9 @@
             .chord {
               color: $clr-primary;
               width: fit-content;
-              font-family: monospace;
+              font-family: "Cabin", sans-serif;
               font-weight: bold;
-              font-size: 1rem;
+              font-size: 0.9rem;
             }
           }
         }
