--- a/src/sass/_song.scss
+++ b/src/sass/_song.scss
@@ -44,7 +44,7 @@
             .chord {
               color: $clr-primary;
               width: fit-content;
-              font-family: "Cabin", sans-serif;
+              font-family: "Courier New", Courier, monospace;
               font-weight: bold;
               font-size: 0.9rem;
             }
