--- a/src/sass/_vars.scss
+++ b/src/sass/_vars.scss
@@ -17,7 +17,7 @@
   src: url("../fonts/rubik-bold.woff2") format("woff2");
 }
 
-@import url("https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&display=swap");
+// @import url("https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&display=swap");
 
 $font-main: rubik, sans-serif;
 // $font-main: "Cabin", sans-serif;
