--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,7 +1,8 @@
-@import 'normalize.css';
+@import "normalize.css";
 @import "vars.scss";
 @import "global.scss";
 @import "header.scss";
 @import "main.scss";
 @import "song.scss";
+@import "scroller.scss";
 @import "footer.scss";
