--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -27,6 +27,12 @@ body {
   margin: 0 auto;
 }
 
+h1.fancy {
+  color: $clr-accent;
+  text-shadow: 0.1rem 0.1rem 0 $clr-primary;
+  margin: 0;
+}
+
 nav.scroll-control {
   button {
     background-color: transparent;
