--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -3,6 +3,7 @@
 @import "global.scss";
 @import "header.scss";
 @import "main.scss";
+@import "home.scss";
 @import "song.scss";
 @import "scroller.scss";
 @import "footer.scss";
