--- a/src/sass/_scroller.scss
+++ b/src/sass/_scroller.scss
@@ -1,10 +1,6 @@
 #scroller {
   position: fixed;
   bottom: 1rem;
-  right: 10vw;
-
-  svg {
-    fill: $clr-accent;
-    // fill-opacity: "0.5";
-  }
+  right: 1rem;
+  z-index: 4;
 }
