--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -2,14 +2,17 @@
   @include spacer;
   background-color: $clr-primary;
   color: $clr-accent;
+  z-index: 5;
+  position: relative;
 
   section.container {
     display: flex;
     align-items: center;
     justify-content: space-between;
 
-    svg {
-      fill: $clr-accent;
+    span a {
+      color: $clr-accent;
+      // text-decoration: none;
     }
   }
 }
