--- a/src/sass/_song.scss
+++ b/src/sass/_song.scss
@@ -7,10 +7,11 @@
       font-weight: bold;
 
       .container {
+        @include spacer;
         display: flex;
         flex-wrap: wrap;
         align-items: center;
-        justify-content: space-around;
+        justify-content: space-between;
       }
 
       h1 {
