--- a/src/sass/_song.scss
+++ b/src/sass/_song.scss
@@ -1,62 +1,53 @@
-#site-main {
-  .song {
-    .song-header {
-      background-color: $clr-bg;
-      border-bottom: 1px solid $clr-accent;
-      color: $clr-primary;
-      font-weight: bold;
+.song {
+  .song-header {
+    background-color: $clr-bg;
+    border-bottom: 1px solid $clr-accent;
+    color: $clr-primary;
+    font-weight: bold;
 
-      .container {
-        @include spacer;
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: space-between;
-      }
-
-      h1 {
-        // font-size: 1.2rem;
-
-        padding: 1rem;
-      }
-
-      span {
-        padding: 1rem;
-      }
+    .container {
+      @include spacer;
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: space-between;
     }
 
-    .song-content {
-      div {
-        margin: 0;
-      }
+    h1 {
+      // font-size: 1.2rem;
 
-      .paragraph {
-        margin-bottom: 3rem;
+      padding: 1rem;
+    }
 
-        .row {
-          display: flex;
-          flex-wrap: wrap;
-          margin-bottom: 0.5rem;
+    span {
+      padding: 1rem;
+    }
+  }
 
-          .column {
-            margin-right: 0.2rem;
-            // font-size: 1.1rem;
+  .song-content {
+    .paragraph {
+      margin-bottom: 3rem;
 
-            .chord {
-              color: $clr-primary;
-              width: fit-content;
-              font-family: "Courier New", Courier, monospace;
-              font-weight: bold;
-              font-size: 0.9rem;
+      .row {
+        display: flex;
+        flex-wrap: wrap;
+        margin-bottom: 0.5rem;
 
-              // &:empty {
-              //   min-width: 0;
-              // }
-              &::after {
-                // this is needed so empty chords don't mess up layout
-                content: ".";
-                color: transparent;
-              }
+        .column {
+          margin-right: 0.2rem;
+          font-size: 1.1rem;
+
+          .chord {
+            color: $clr-primary;
+            // width: fit-content;
+            font-family: "Courier New", Courier, monospace;
+            font-size: 1rem;
+            font-weight: bold;
+
+            &::after {
+              // this is needed so empty chords don't mess up layout
+              content: ".";
+              color: transparent;
             }
           }
         }
