--- a/src/sass/_scroller.scss
+++ b/src/sass/_scroller.scss
@@ -3,4 +3,28 @@
   bottom: 1rem;
   right: 1rem;
   z-index: 4;
+
+  button {
+    font-size: 3rem;
+  }
 }
+
+// nav.scroll-control {
+//   button {
+//     background-color: transparent;
+//     border: 0;
+//     cursor: pointer;
+//     display: flex;
+//     font-size: 2rem;
+//     align-items: center;
+//   }
+
+//   // .rc-slider-handle {
+//   //   width: 1.2rem;
+//   //   height: 1.2rem;
+//   //   margin-top: -0.5rem;
+//   //   opacity: 1;
+//   //   background-color: $clr-accent;
+//   //   border: 0;
+//   // }
+// }
