--- a/src/sass/_song.scss
+++ b/src/sass/_song.scss
@@ -14,19 +14,35 @@
     }
 
     h1 {
-      // font-size: 1.2rem;
-
-      padding: 1rem;
+      font-size: 1.2rem;
+      padding: 0.5rem;
     }
 
     span {
-      padding: 1rem;
+      padding: 0.5rem;
+    }
+
+    span.key {
+      display: flex;
+      align-items: center;
+
+      p {
+        margin: 0;
+      }
+
+      nav.transposer {
+        display: flex;
+        button {
+          font-size: 1.5rem;
+          padding: 0 0 0 1rem;
+        }
+      }
     }
   }
 
   .song-content {
     .paragraph {
-      margin-bottom: 3rem;
+      margin-bottom: 2rem;
 
       .row {
         display: flex;
@@ -39,10 +55,8 @@
 
           .chord {
             color: $clr-primary;
-            // width: fit-content;
-            font-family: "Courier New", Courier, monospace;
-            font-size: 1rem;
             font-weight: bold;
+            font-size: 0.9rem;
 
             &::after {
               // this is needed so empty chords don't mess up layout
