--- a/src/sass/_song.scss
+++ b/src/sass/_song.scss
@@ -1,5 +1,6 @@
 .song {
   .song-header {
+    @include spacer;
     background-color: $clr-bg;
     border-bottom: 1px solid $clr-accent;
     color: $clr-primary;
@@ -14,8 +15,10 @@
     }
 
     h1 {
-      font-size: 1.5rem;
-      padding: 0.5rem;
+      a {
+        color: inherit;
+        text-decoration: none;
+      }
     }
 
     span {
