--- a/src/sass/_song.scss
+++ b/src/sass/_song.scss
@@ -15,6 +15,10 @@
     }
 
     h1 {
+      line-height: 1.2;
+      padding: 0.5rem;
+      // margin: 0 0 1rem 0;
+
       a {
         color: inherit;
         text-decoration: none;
