--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -30,7 +30,7 @@ body {
 h1.fancy {
   color: $clr-accent;
   text-shadow: 0.1rem 0.1rem 0 $clr-primary;
-  margin: 0;
+  line-height: 1.5;
 
   a {
     text-decoration: none;
@@ -52,4 +52,15 @@ button {
   border: 0;
   margin: 0;
   padding: 0;
+}
+
+.chunk {
+  @include spacer;
+}
+
+.page-header {
+  background-color: $clr-bg;
+  color: $clr-primary;
+  border-bottom: 1px solid $clr-accent;
+  font-weight: bold;
 }
