--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -30,11 +30,16 @@
           &:focus-visible {
             outline: none;
           }
+
+          &::placeholder {
+            font-size: .8rem;
+          }
         }
 
         button {
           width: 1.5rem;
           font-size: 1.5rem;
+          margin: 0 0.5rem;
         }
 
         @include medium {
