--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -1,28 +1,33 @@
 #home {
   header {
-    
     section.container {
-
       @include flex;
       justify-content: space-between;
 
       #song-list-control {
         @include flex;
 
+        button,
+        span {
+          margin: 0.5rem;
+        }
+
         button {
           font-size: 2rem;
-          margin: 0.5rem;
         }
       }
 
       #filter-search {
         @include flex;
+        border-radius: 10rem;
         background-color: white;
         width: 100%;
         border: 1px solid $clr-primary;
+        padding: 0 0.5rem;
 
         input {
           border: 0;
+          border-radius: 10rem;
           margin-right: 0.5rem;
           padding: 0.5rem;
           flex-grow: 1;
@@ -32,14 +37,14 @@
           }
 
           &::placeholder {
-            font-size: .8rem;
+            font-size: 0.9rem;
           }
         }
 
         button {
           width: 1.5rem;
           font-size: 1.5rem;
-          margin: 0 0.5rem;
+          // margin: 0 0.5rem;
         }
 
         @include medium {
