--- a/src/sass/_song.scss
+++ b/src/sass/_song.scss
@@ -4,6 +4,9 @@
       @include flex;
     }
 
+    span.artist {
+    }
+
     span.key {
       display: flex;
       align-items: center;
@@ -48,6 +51,10 @@
               content: ".";
               color: transparent;
             }
+          }
+
+          .lyrics {
+            font-family: $font-lyrics;
           }
         }
       }
