--- a/src/sass/_song.scss
+++ b/src/sass/_song.scss
@@ -45,6 +45,7 @@
             color: $clr-primary;
             font-weight: bold;
             font-size: 0.9rem;
+            line-height: 1;
 
             &::after {
               // this is needed so empty chords don't mess up layout
@@ -54,7 +55,7 @@
           }
 
           .lyrics {
-            font-family: $font-lyrics;
+            // font-family: $font-lyrics;
           }
         }
       }
