add burger menu (unsued)

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -2,6 +2,7 @@
 @import "vars.scss";
 @import "global.scss";
 @import "header.scss";
+@import "burger-menu";
 @import "main.scss";
 @import "home.scss";
 @import "song.scss";
