--- a/src/sass/_song.scss
+++ b/src/sass/_song.scss
@@ -38,12 +38,12 @@
         margin-bottom: 0.5rem;
 
         .column {
-          margin-right: 0.2rem;
-          font-size: 1.1rem;
+          margin-right: 0.1rem;
+          // font-size: 1.1rem;
 
           .chord {
             color: $clr-primary;
-            font-weight: bold;
+            font-weight: 600;
             font-size: 0.9rem;
             line-height: 1;
 
