--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -2,7 +2,7 @@ html {
   font-size: calc(16px + 4 * ((100vw - 320px) / 680));
 
   @include small {
-    font-size: 16px;  
+    font-size: 16px;
   }
 
   @include large {
@@ -22,7 +22,7 @@ body {
 
 h1.fancy {
   color: $clr-accent;
-  text-shadow: 0.1rem 0.1rem 0 $clr-primary;
+  text-shadow: 0.1rem 0.1rem 0 darken($clr-primary, 20%);
   margin: 0 0 1rem 0;
   line-height: 1;
 
@@ -30,6 +30,10 @@ h1.fancy {
     text-decoration: none;
     color: $clr-accent;
   }
+}
+
+.chunk {
+  padding: 0.5rem;
 }
 
 svg {
@@ -55,12 +59,17 @@ button {
   color: $clr-primary;
   border-bottom: 1px solid $clr-accent;
   font-weight: bold;
+}
 
-  .chunk {
-    margin: 0 1rem 1rem 0;
+span.widget {
+  @include flex;
 
-    &:last-child {
-      margin: 0 0 1rem 0;
-    }
+  p {
+    margin: 0;
+  }
+
+  button {
+    font-size: 1.5rem;
+    padding: 0 0 0 1rem;
   }
 }
