--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -6,16 +6,6 @@
 
       #song-list-control {
         @include flex;
-        margin: 0;
-
-        button,
-        span {
-          margin: 0.5rem;
-        }
-
-        button {
-          font-size: 2rem;
-        }
       }
 
       #filter-search {
@@ -83,11 +73,11 @@
           font-size: 0.8rem;
 
           &::before {
-            content: "(";
+            content: '(';
           }
 
           &::after {
-            content: ")";
+            content: ')';
           }
         }
       }
