--- a/src/sass/_scroller.scss
+++ b/src/sass/_scroller.scss
@@ -1,30 +1,28 @@
 #scroller {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   position: fixed;
   bottom: 1rem;
   right: 1rem;
   z-index: 4;
+  opacity: .5;
 
   button {
     font-size: 3rem;
   }
+
+  .rc-slider {
+    min-height: 8rem;
+    margin-bottom: 1rem;
+
+    .rc-slider-track {
+      background-color: $clr-accent;
+    }
+
+    .rc-slider-handle {
+      background-color: $clr-accent;
+      border: 0;
+    }
+  }
 }
-
-// nav.scroll-control {
-//   button {
-//     background-color: transparent;
-//     border: 0;
-//     cursor: pointer;
-//     display: flex;
-//     font-size: 2rem;
-//     align-items: center;
-//   }
-
-//   // .rc-slider-handle {
-//   //   width: 1.2rem;
-//   //   height: 1.2rem;
-//   //   margin-top: -0.5rem;
-//   //   opacity: 1;
-//   //   background-color: $clr-accent;
-//   //   border: 0;
-//   // }
-// }
