--- a/src/sass/_scroller.scss
+++ b/src/sass/_scroller.scss
@@ -3,10 +3,10 @@
   flex-direction: column;
   align-items: center;
   position: fixed;
-  bottom: 1rem;
-  right: 1rem;
+  bottom: 5rem;
+  right: 2rem;
   z-index: 4;
-  opacity: .5;
+  opacity: 0.5;
 
   button {
     font-size: 3rem;
