--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,11 +1,10 @@
-@import "normalize.css";
-@import "vars.scss";
-@import "global.scss";
-@import "header.scss";
-@import "burger-menu";
-@import "main.scss";
-@import "home.scss";
-@import "song.scss";
-@import "scroller.scss";
-@import "footer.scss";
-@import "print.scss";
+@import 'normalize.css';
+@import 'vars.scss';
+@import 'global.scss';
+@import 'header.scss';
+@import 'main.scss';
+@import 'home.scss';
+@import 'song.scss';
+@import 'scroller.scss';
+@import 'footer.scss';
+@import 'print.scss';
