--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -18,6 +18,8 @@ body {
 .container {
   max-width: $breakpoint-lrg;
   margin: 0 auto;
+  // border: 1px solid red;
+  padding: 0.5rem;
 }
 
 h1.fancy {
@@ -54,7 +56,7 @@ button {
 }
 
 .page-header {
-  padding: 0.5rem;
+  // padding: 0.5rem;
   background-color: $clr-bg;
   color: $clr-primary;
   border-bottom: 1px solid $clr-accent;
