--- a/src/sass/_vars.scss
+++ b/src/sass/_vars.scss
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700&display=swap");
 
-$font-main: 'Source Sans Pro', sans-serif;
+$font-main: "Source Sans Pro", sans-serif;
 
 // colours
 $clr-primary: hsl(216, 71%, 39%);
 $clr-accent: hsl(62, 100%, 40%);
-$clr-bg: hsla(62, 100%, 40%, 10%);
+$clr-bg: hsl(62, 50%, 95%);
 
 // breakpoints
 $breakpoint-small: 350px;
