--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -57,7 +57,6 @@ button {
 }
 
 .page-header {
-  // padding: 0.5rem;
   background-color: $clr-bg;
   color: $clr-primary;
   border-bottom: 1px solid $clr-accent;
@@ -72,7 +71,8 @@ button {
   }
 
   button {
-    font-size: 1.5rem;
-    padding: 0 0 0 1rem;
+    font-size: 1.6rem;
+    margin: 0 0 0 0.5rem;
+    // padding: 0 0 0 1rem;
   }
 }
