--- a/src/sass/_scroller.scss
+++ b/src/sass/_scroller.scss
@@ -7,6 +7,7 @@
     width: 3rem;
     flex-grow: 1;
     align-items: center;
+    margin-right: 1rem;
 
     .rc-slider-track {
       background-color: $clr-accent;
